@@ -4,6 +4,7 @@ Date: ????
   Features:
     - Added required fluid to resource tooltip
   Bugfixes:
+    - Fixed that even if a page was already open, it would be added again to the session history and re-opened
     - Fixed the session history active line not lining up with the other lines
 ---------------------------------------------------------------------------------------------------
 Version: 2.4.1
